--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,137 +1,72 @@
 {
     "env": {
-        "browser": true,
-        "es6": true
+      "browser": true,
+      "es6": true
     },
-    "ignorePatterns": [
-        "node_modules",
-        "dist",
-        "build"
-    ],
+    "ignorePatterns": ["node_modules", "dist", "build"],
     "extends": [
-        "airbnb",
-        "airbnb/hooks",
-        "eslint:recommended",
-        "plugin:react/jsx-runtime",
-        "plugin:react/recommended",
-        "plugin:import/errors",
-        "plugin:import/warnings",
-        "plugin:prettier/recommended"
+      "airbnb",
+      "airbnb/hooks",
+      "eslint:recommended",
+      "plugin:react/jsx-runtime",
+      "plugin:react/recommended",
+      "plugin:import/errors",
+      "plugin:import/warnings"
     ],
     "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": "latest",
-        "sourceType": "module"
+      "ecmaFeatures": {
+        "jsx": true
+      },
+      "ecmaVersion": 2023,
+      "sourceType": "module"
     },
-    "plugins": [
-        "react",
-        "import",
-        "prettier"
-    ],
+    "plugins": ["react", "import"],
     "rules": {
-        "indent": [
-            "error",
-            2,
-            {
-                "SwitchCase": 1
-            }
-        ],
-        "prettier/prettier": [
-            "error",
-            {
-                "endOfLine": "auto"
-            }
-        ],
-        "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
-        "react/function-component-definition": [
-            2,
-            {
-                "namedComponents": "arrow-function",
-                "unnamedComponents": "function-expression"
-            }
-        ],
-        "linebreak-style": [
-            0,
-            "unix"
-        ],
-        "quotes": [
-            "error",
-            "single"
-        ],
-        "semi": [
-            "error",
-            "always"
-        ],
-        "react/react-in-jsx-scope": "off",
-        "react/prop-types": 0,
-        "no-param-reassign": [
-            "error",
-            {
-                "props": false
-            }
-        ],
-        "no-plusplus": 0,
-        "react/forbid-prop-types": [
-            0,
-            {
-                "forbid": [
-                    "any",
-                    "array",
-                    "object"
-                ],
-                "checkContextTypes": false,
-                "checkChildContextTypes": false
-            }
-        ],
-        "import/no-unresolved": [
-            2,
-            {
-                "caseSensitive": false
-            }
-        ],
-        "react/jsx-filename-extension": [
-            1,
-            {
-                "extensions": [
-                    ".js",
-                    ".jsx"
-                ]
-            }
-        ],
-        "import/order": [
-            2,
-            {
-                "groups": [
-                    "builtin",
-                    "external",
-                    "internal",
-                    "parent",
-                    "sibling",
-                    "index"
-                ],
-                "newlines-between": "always"
-            }
-        ]
+      "indent": ["error", 2, { "SwitchCase": 1}],
+      "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
+      "react/function-component-definition": [
+        2,
+        {
+          "namedComponents": "arrow-function",
+          "unnamedComponents": "function-expression"
+        }
+      ],
+      "react/jsx-one-expression-per-line": [0],
+      "linebreak-style": ["error", "windows"],
+      "quotes": ["error", "single"],
+      "semi": ["error", "always"],
+      "react/react-in-jsx-scope": "off",
+      "react/prop-types": 0,
+      "no-param-reassign": ["error", { "props": false }],
+      "no-plusplus": 0,
+      "react/forbid-prop-types": [
+        0,
+        {
+          "forbid": ["any", "array", "object"],
+          "checkContextTypes": false,
+          "checkChildContextTypes": false
+        }
+      ],
+      "import/no-unresolved": [2, { "caseSensitive": false }],
+      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+      "import/order": [
+        2,
+        {
+          "groups": ["builtin", "external", "internal", "parent", "sibling", "index"],
+          "newlines-between": "always"
+        }
+      ]
     },
     "settings": {
-        "react": {
-            "version": "detect"
-        },
-        "import/resolver": {
-            "node": {
-                "extensions": [
-                    ".js",
-                    ".jsx",
-                    ".ts",
-                    ".tsx"
-                ],
-                "moduleDirectory": [
-                    "node_modules",
-                    "src/"
-                ]
-            }
+      "react": {
+        "version": "detect"
+      },
+      "import/resolver": {
+        "node": {
+          "extensions": [".js", ".jsx", ".ts", ".tsx"],
+          "moduleDirectory": ["node_modules", "src/"]
         }
+      }
     }
-}
+  }
+  
