--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,11 +27,12 @@
       "react/function-component-definition": [
         2,
         {
-          "namedComponents": "arrow-function",
-          "unnamedComponents": "function-expression"
+          "namedComponents": "function-declaration",
+          "unnamedComponents": "arrow-function"
         }
       ],
       "react/jsx-one-expression-per-line": [0],
+      "object-curly-newline": ["error", { "consistent": true }],
       "linebreak-style": ["error", "windows"],
       "quotes": ["error", "single"],
       "semi": ["error", "always"],
