--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "lint-staged": {
     "*.{js,jsx, css}": [
       "npm run lint:fix",
-      "npm run format"
+      "npm run lint:fix"
     ]
   },
   "eslintConfig": {
