--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,7 +33,7 @@
       ],
       "react/jsx-one-expression-per-line": [0],
       "object-curly-newline": ["error", { "consistent": true }],
-      "linebreak-style": ["error", "windows"],
+      "linebreak-style": "off",
       "quotes": ["error", "single"],
       "semi": ["error", "always"],
       "react/react-in-jsx-scope": "off",
